# discord-bot

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: checks.yml
src/: event_handler.rs  main.rs  primitives.rs
src/commands/: mod.rs
src/commands/admin/: ban.rs  mod.rs  unban.rs
src/commands/general/: ping.rs
src/commands/information/: status.rs
src/commands/music/: join.rs  leave.rs  mod.rs  next.rs  np.rs  play.rs  queue.rs  remove.rs
src/commands/staff/: ban.rs  kick.rs  mod.rs  servidor.rs  unban.rs
src/commands/utils/: mod.rs  nppp.rs  userinfo.rs  web.rs
src/common/: messages.rs
src/handlers/: mod.rs  on_error.rs  role_selection.rs
src/jobs/: browser.rs  mod.rs
src/utils/: log_channel.rs  mod.rs  process.rs  time.rs  validations.rs  web.rs
