[package]
name = "codify"
version = "0.2.0-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
dotenv = "0.15.0"
humansize = "2.1.2"
poise = { git = "https://github.com/kangalioo/poise.git", version = "0.4.1" }
sysinfo = "0.26.7"
tokio = { version = "1.21.2", features = ["rt-multi-thread", "sync"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
