[package]
name = "codify"
version = "0.6.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
dotenvy = "0.15.6"
poise = { git = "https://github.com/kangalioo/poise.git", version = "0.4.1" }
rustbreak = { version = "2.0.0", features = ["ron_enc"], default-features = false }
serde = { version = "1.0.147", features = ["derive"] }
sysinfo = "0.26.7"
tokio = { version = "1.21.2", features = ["rt-multi-thread", "sync"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
